--- a/index.html
+++ b/index.html
@@ -39,22 +39,26 @@
 				</div>
 				<div class="mobile-nav-links">
 					<div class="mobile-nav-border">
-						<a class="mobile-nav-link" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
+						<a class="mobile-nav-link " href="index.html"><i class="fa-solid fa-house"></i><span
+								class="abcdef">Home</span></a>
 					</div>
 					<div class="mobile-nav-border">
 						<a class="mobile-nav-link" href="/pages/Gallery/gallery.html"><i
-								class="fa-regular fa-images"></i> Gallery</a>
+								class="fa-regular fa-images"></i> <span class="abcdef">Gallery</span></a>
 					</div>
 					<div class="mobile-nav-border">
-						<a class="mobile-nav-link" href="#about"><i class="fa-regular fa-address-card"></i> About
-							Us</a>
+						<a class="mobile-nav-link" href="#about"><i class="fa-regular fa-address-card"></i> <span
+								class="abcdef">About Us</span>
+						</a>
 					</div>
 					<div class="mobile-nav-border" id="contact">
-						<a class="mobile-nav-link" href="#contact-us"><i class="fa-regular fa-envelope"></i> Contact
-							Us</a>
+						<a class="mobile-nav-link" href="#contact-us"><i class="fa-regular fa-envelope"></i> <span
+								class="abcdef">Contact Us</span>
+						</a>
 					</div>
 					<div class="mobile-nav-border">
-						<a class="mobile-nav-link" href="tel:506-875-1803"><i class="fa-solid fa-phone"></i> Call
+						<a class="mobile-nav-link" href="tel:506-875-1803"><i class="fa-solid fa-phone"></i>
+							Call
 							Us</a>
 					</div>
 				</div>
@@ -86,7 +90,7 @@
 	<div class="bottom">
 		<div class="carousel">
 			<div class="box">
-				<img src="/resources/images/IMG_1071.jpg" alt="" />
+				<img src="/resources/images/IMG_1066.jpg" alt="" />
 			</div>
 			<div class="box">
 				<img src="/resources/images/IMG_1070.jpg" alt="" />
@@ -101,7 +105,7 @@
 				<img src="/resources/images/IMG_1067.jpg" alt="" />
 			</div>
 			<div class="box">
-				<img src="/resources/images/IMG_1066.jpg" alt="" />
+				<img src="/resources/images/IMG_1071.jpg" alt="" />
 			</div>
 		</div>
 	</div>
